# videospectra

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture-v0.1.md  modularity.md  requirements-v0.1.md
docs/assets/: make_hero.py
examples/: README.md  color_histogram_demo.py  open_clip_frame_pooling.py  rzenembed_full.py
notebooks/: quickstart.ipynb
tests/: conftest.py  test_cli.py  test_embedders.py  test_events.py  test_server.py  test_session.py  test_sinks.py  test_sources.py  test_spectral.py  test_types.py
tests/fixtures/: legacy_compute_entropy.py
tests/integration/: test_end_to_end.py  test_parity_with_legacy.py
videospectra/: cli.py  embedders.py  events.py  session.py  sinks.py  sources.py  spaces.py
videospectra/analytics/: __init__.py  spectral.py
videospectra/server/: __init__.py  app.py  routes.py  sinks.py
videospectra/server/static/: dashboard.html
vnvideo/: cli.py  embedders.py  events.py  session.py  sinks.py  sources.py  spaces.py  types.py
vnvideo/_internal/: normalize.py
vnvideo/analytics/: __init__.py  spectral.py
vnvideo/server/: __init__.py  app.py  routes.py  sinks.py
